[tool.poetry]
name = "adventofcode23"
version = "0.1.0"
description = ""
authors = ["Varun Ramakrishnan <ravarun3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
